--- a/M04 - Llenguatge de marques/html/index.html
+++ b/M04 - Llenguatge de marques/html/index.html
@@ -2,12 +2,38 @@
 <html>
 <head>
     <title>Civilizations</title>
-    <link rel="stylesheet" href="xml/css/index.css">
-
+    <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
 
     <h1>Civilizations</h1>
+
+    <div class="text_intro">
+        <p> En nuestra aplicación, vamos a estar al mando de una pequeña civilización. Dispondremos de
+            recursos, tecnologías, edificios, defensas y unidades tanto de ataque como defensa.
+            Desgraciadamente, no vamos a poder vivir tranquilos, dado que hay otras civilizaciones que quieren
+            conquistarnos i que nos van a atacar constantemente. Ésto nos va a obligar a cuidar las defensas de
+            nuestra civilización para defendernos de los ataques continuos. </p>
+    </div>
+
+    <div class="container">
+        <div class="box">
+            <h2>Attack Unit</h2>
+            <p>Dentro de nuestras unidades de ataque podemos encontrar</p>
+        </div>
+        <div class="box">
+            <h2>Special Units</h2>
+            <p>Dentro de nuestras unidades especiales podemos encontrar</p>
+        </div>
+        <div class="box">
+            <h2>Defences</h2>
+            <p>Texto para el tercer cuadro.</p>
+        </div>
+        <div class="box">
+            <h2>Buildings</h2>
+            <p>Texto para el cuarto cuadro.</p>
+        </div>
+    </div>
 
 </body>
 </html>
