--- a/M04 - Llenguatge de marques/html/index.html
+++ b/M04 - Llenguatge de marques/html/index.html
@@ -3,6 +3,9 @@
 <head>
     <title>Civilizations</title>
     <link rel="stylesheet" href="css/index.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Khula:wght@300;400;600;700;800&family=Ubuntu+Sans:ital,wght@0,100..800;1,100..800&display=swap" rel="stylesheet">
 </head>
 <body>
 
@@ -18,20 +21,37 @@
 
     <div class="container">
         <div class="box">
-            <h2>Attack Unit</h2>
-            <p>Dentro de nuestras unidades de ataque podemos encontrar</p>
+            <a href="attack_units.html">
+                <h2>Attack Unit</h2>
+            </a>
+            <p>Las unidades de ataque son la espada afilada de nuestra civilización. Con su fuerza y destreza, 
+               son capaces de enfrentarse a las fuerzas enemigas y proteger nuestro territorio. Desde soldados entrenados hasta máquinas de guerra imponentes, 
+               nuestras unidades de ataque son la vanguardia de nuestra defensa y el arma principal de nuestra conquista.</p>
         </div>
         <div class="box">
-            <h2>Special Units</h2>
-            <p>Dentro de nuestras unidades especiales podemos encontrar</p>
+            <a href="special_units.html">
+                <h2>Special Units</h2>
+            </a>
+            <p>Nuestras unidades especiales son la joya de la corona de nuestra civilización. Son la encarnación de la innovación y la excelencia, 
+               diseñadas para desempeñar roles únicos y estratégicos en el campo de batalla. Como poderosos hechiceros, 
+               estas unidades destacadas nos brindan la ventaja necesaria para triunfar incluso en las situaciones más difíciles.</p>
         </div>
         <div class="box">
-            <h2>Defences</h2>
-            <p>Texto para el tercer cuadro.</p>
+            <a href="defence_units.html">
+                <h2>Defences</h2>
+            </a>
+            <p>Las defensas son los pilares que sostienen la seguridad de nuestra civilización. Desde catapultas imponentes hasta torres de arqueros, 
+               estas estructuras forman un escudo infranqueable que protege nuestras tierras y a nuestro pueblo de cualquier amenaza externa. 
+               Con una combinación de ingenio y fortaleza, nuestras defensas garantizan la supervivencia y la prosperidad de nuestra civilización en tiempos de paz y de guerra.</p>
         </div>
         <div class="box">
-            <h2>Buildings</h2>
-            <p>Texto para el cuarto cuadro.</p>
+            <a href="buildings.html">
+                <h2>Buildings</h2>
+            </a>
+            <p>Los edificios son la columna vertebral de nuestra civilización, el fundamento sobre el cual construimos nuestro futuro. 
+               Desde granjas que nos proporcionan alimentos hasta granjas que nos otorgan alimentos, cada edificio cumple una 
+               función vital en el desarrollo y la expansión de nuestra sociedad. Con una planificación cuidadosa y una gestión eficiente, 
+               nuestros edificios son el testimonio de nuestro progreso y el legado que dejaremos a las generaciones venideras.</p>
         </div>
     </div>
 
