--- a/M04 - Llenguatge de marques/html/special_units.html
+++ b/M04 - Llenguatge de marques/html/special_units.html
@@ -44,7 +44,7 @@
         <p>Attack Again Chance: 0%</p>
         <h3>Plus Stats</h3>
         <ul>
-          <li>Resurect Chance: </li>
+          <li>Resurect Chance: 0</li>
           <li>Armor Technology: 0</li>
           <li>Attack Technology: 0</li>
           <li>Armor Experience: 4</li>
