--- a/M04 - Llenguatge de marques/html/index.html
+++ b/M04 - Llenguatge de marques/html/index.html
@@ -5,9 +5,12 @@
     <link rel="stylesheet" href="css/index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <script src="shadowPartial.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Khula:wght@300;400;600;700;800&family=Ubuntu+Sans:ital,wght@0,100..800;1,100..800&display=swap" rel="stylesheet">
 </head>
 <body>
+    <shadow-partial data-html="menu.part.html" data-css="menu.part.css"></shadow-partial>
+
     <div class="fondo">
         <h1>Civilizations</h1>
 
@@ -156,5 +159,6 @@
     </div>
     
     </div>
+    <shadow-partial data-html="footer.part.html" data-css="footer.part.css"></shadow-partial>
 </body>
 </html>
