--- a/M04 - Llenguatge de marques/html/special_units.html
+++ b/M04 - Llenguatge de marques/html/special_units.html
@@ -2,8 +2,11 @@
   <head>
     <title>Special Units</title>
     <link rel="stylesheet" href="css/all.css"/>
+    <script src="shadowPartial.js"></script>
   </head>
   <body>
+    <shadow-partial data-html="menu.part.html" data-css="menu.part.css"></shadow-partial>
+
     <h1>Special Units</h1>
     <div class="container">
       <div class="unit">
@@ -61,5 +64,6 @@
         </ul>
       </div>
     </div>
+    <shadow-partial data-html="footer.part.html" data-css="footer.part.css"></shadow-partial>
   </body>
 </html>
